# uniform-algebras

./: .ghci  .gitignore  ChangeLog.md  README.md  hie.yaml  package.yaml  report.html  stack.leksah.yaml  stack.yaml  uniform-algebras copy.cabal.goot  uniform-algebras.cabal  uniform-algebras.oldcabal
Uniform/: ListForm.hs  Pointless.hs  Properties.hs  Tuples.hs  Zero.hs
app/: Main.hs
src/: Main.hs  UniformAlgebraTest.hs
