name: uniform-algebras
version: 0.0.8
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Error Exception
synopsis: some simple algebras, eg. zero
description: simple algebras without too much mathematical underpinning
    zero (not a semigroupoid...)

source-repository head
    type: git
--    location: https://github.com/andrewufrank/uniform-algebra.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        -- , safe
        , MissingH
        , HTF
        , text
    exposed-modules:
        Uniform.Zero

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

--Test-Suite algebrasTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    UniformAlgebraTest.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:

--Test-Suite algebrastest
--    type:       exitcode-stdio-1.0
--    build-depends:  base -any
--        , HTF
----                    bytestring -any, mtl,
----                   text -any, utf8-string -any
----       , uniform-strings
--       , uniform-algebras
--       , data-easy
----       , basics -- must not be included, gives dependency issue
--    main-is: Main.hs
--    buildable: True
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
--        TestingAlgebras
