name: uniform-algebras
version: 0.0.9.3
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Error Exception
synopsis: some simple algebras, eg. zero
description: simple algebras without too much mathematical underpinning
    zero (not a semigroupoid...)

source-repository head
    type: git
--    location: https://github.com/andrewufrank/uniform-algebra.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        -- , safe
        , MissingH
        , HTF
        , text
    exposed-modules:
        Uniform.Zero
        Uniform.ListForm
        Uniform.Pointless

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

--Test-Suite algebrasTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    UniformAlgebraTest.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:

